--- a/updatedemo/css/people.css
+++ b/updatedemo/css/people.css
@@ -1,6 +1,6 @@
 .detail {
     overflow: hidden;
-    max-width: 1170px;
+    max-width: 1096px;
     height: 100%;
 }
 
@@ -8,9 +8,9 @@
 .floor-num {
     float: left;
     background-color: #fff;
-    width: 270px;
+    width: 239px;
     height: 100%;
-    padding: 30px 20px 0;
+    padding: 30px 15px 0;
 }
 
 .floor-num h2 {
@@ -20,8 +20,8 @@
     color: #212224;
 }
 
-.floor-num input {
-    width: 200px;
+.floor-num .search input {
+    width: 175px;
     height: 20px;
     background: #F8F8F8;
     border-radius: 10px;
@@ -33,7 +33,6 @@
     color: #E5E5E5;
     padding-left: 32px;
     /* text-align: center; */
-    margin-top: 12px;
     /* margin-bottom: 24px; */
 }
 
@@ -49,6 +48,20 @@
 
 input::-webkit-input-placeholder {
     color: #E5E5E5;
+}
+
+.floor-num .search {
+    position: relative;
+    margin-top: 12px;
+}
+
+.floor-num .search i {
+    display: inline;
+    width: 13px;
+    height: 13px;
+    position: absolute;
+    top: 6px;
+    left: 9px;
 }
 
 ul.village li {
@@ -87,14 +100,14 @@ ul.village li ul li.active {
 /* 楼宇单元 */
 .unit-num {
     float: left;
-    width: 661px;
+    width: 635px;
     height: 100%;
     padding: 25px 15px;
 }
 
 .unit-top>ul {
     overflow: hidden;
-    margin-left: -97px;
+    margin-left: -90px;
 }
 
 .unit-top>ul li {
@@ -103,7 +116,7 @@ ul.village li ul li.active {
     font-weight: 400;
     color: #2E2C2C;
     float: left;
-    margin-left: 97px;
+    margin-left: 90px;
 }
 
 .unit-top>ul li span {
@@ -127,7 +140,7 @@ ul.village li ul li.active {
 
 .unit-room>ul {
     overflow: hidden;
-    margin-left: -20px;
+    margin-left: -10px;
     margin-top: 15px;
 }
 
@@ -138,7 +151,7 @@ ul.village li ul li.active {
     box-shadow: 0px 2px 11px 2px rgba(37, 93, 144, 0.14);
     border-radius: 10px 10px 10px 10px;
     float: left;
-    margin-left: 20px;
+    margin-left: 10px;
     margin-top: 20px;
     overflow: hidden;
 }
@@ -182,10 +195,10 @@ ul.village li ul li.active {
 /* 户主信息 */
 .information {
     float: right;
-    width: 239px;
+    /* width: 239px; */
     height: 100%;
     background-color: #fff;
-    padding: 30px 20px 0;
+    padding: 30px 15px 0;
 }
 
 .information h3 {
